@@ -13,6 +13,7 @@ Version 1.10.6+dev:
  * Miscellaneous and bug fixes
    * Improved: Autorevision based revision numbers in CMake.
    * Fixed the recall list sometimes getting confused when dismissing a recall.
+   * Prevent unchecked memory access in cut_surface()
 
 Version 1.10.6:
  * Campaigns:
